@@ -1,0 +1,101 @@
+<?php
+/**
+ * This file is part of ForwardFW a web application framework.
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public
+ * License as published by the Free Software Foundation; either
+ * version 2.1 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ *
+ * PHP version 5
+ *
+ * @category   Filter
+ * @package    ForwardFW
+ * @subpackage Config
+ * @author     Alexander Opitz <opitz.alexander@primacom.net>
+ * @copyright  2009-2013 The Authors
+ * @license    http://www.gnu.org/copyleft/gpl.html GNU General Public License
+ * @link       http://forwardfw.sourceforge.net
+ * @since      File available since Release 0.0.11
+ */
+
+namespace ForwardFW\Config\Filter\RequestResponse;
+
+/**
+ * Config for a Application Filter.
+ *
+ * @category   Filter
+ * @package    ForwardFW
+ * @subpackage Config
+ * @author     Alexander Opitz <opitz.alexander@primacom.net>
+ * @license    http://www.gnu.org/copyleft/gpl.html GNU General Public License
+ * @link       http://forwardfw.sourceforge.net
+ */
+class Application extends \ForwardFW\Config\Filter\RequestResponse
+{
+    /**
+     * @var string ApplicationClass to call
+     */
+    private $strApplicationClass = '';
+
+    /**
+     * @var ForwardFW\Config\Application Config of the application
+     */
+    private $applicationConfig = '';
+
+    /**
+     * Sets Classname of the application to call.
+     *
+     * @param string $strApplicationClass Name of the RequestResponse filter to add in FilterChain
+     *
+     * @return ForwardFW\Config\Filter\RequestResponse\Application
+     */
+    public function setApplicationClass($strApplicationClass)
+    {
+        $this->strApplicationClass = $strApplicationClass;
+        return $this;
+    }
+
+    /**
+     * Config of the RequestResponse filter
+     *
+     * @param ForwardFW\Config\Filter\RequestResponse $applicationConfig Config of the RequestResponse filter.
+     *
+     * @return FForwardFW\Config\Filter\RequestResponse\Application
+     */
+    public function setApplicationConfig(\ForwardFW\Config\Application $applicationConfig)
+    {
+        $this->applicationConfig = $applicationConfig;
+        return $this;
+    }
+
+    /**
+     * Get Classname of the application to call.
+     *
+     * @return string
+     */
+    public function getApplicationClass()
+    {
+        return $this->strApplicationClass;
+    }
+
+
+    /**
+     * Get config of the RequestResponse filter.
+     *
+     * @return ForwardFW\Config\Application
+     */
+    public function getApplicationConfig()
+    {
+        return $this->applicationConfig;
+    }
+}
